# MACVN-runner

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
apps/vnrt-inspect/: Cargo.toml
apps/vnrt-inspect/src/: main.rs
apps/vnrt-runner/: Cargo.toml
apps/vnrt-runner/src/: main.rs
apps/vnrt-runner/tests/: exit_code.rs
crates/vnrt-advapi32/: Cargo.toml
crates/vnrt-advapi32/src/: lib.rs
crates/vnrt-comctl32/: Cargo.toml
crates/vnrt-comctl32/src/: lib.rs
crates/vnrt-d3d9/: Cargo.toml
crates/vnrt-d3d9/src/: lib.rs
crates/vnrt-debugger/: Cargo.toml
crates/vnrt-debugger/src/: lib.rs
crates/vnrt-dsound/: Cargo.toml
crates/vnrt-dsound/src/: lib.rs
crates/vnrt-gdi32/: Cargo.toml
crates/vnrt-gdi32/src/: lib.rs
crates/vnrt-gfx/: Cargo.toml
crates/vnrt-gfx-wgpu/: Cargo.toml
crates/vnrt-gfx-wgpu/src/: lib.rs
crates/vnrt-gfx/src/: lib.rs
crates/vnrt-imm32/: Cargo.toml
crates/vnrt-imm32/src/: lib.rs
crates/vnrt-kernel32/: Cargo.toml
crates/vnrt-kernel32/src/: lib.rs
crates/vnrt-logprint/: Cargo.toml
crates/vnrt-logprint/src/: lib.rs
crates/vnrt-media/: Cargo.toml
crates/vnrt-media/src/: lib.rs
crates/vnrt-memory/: Cargo.toml
crates/vnrt-memory/src/: lib.rs
crates/vnrt-ntdll/: Cargo.toml
crates/vnrt-ntdll/src/: lib.rs
crates/vnrt-ole32/: Cargo.toml
crates/vnrt-ole32/src/: lib.rs
crates/vnrt-pe/: Cargo.toml
crates/vnrt-pe/src/: lib.rs
crates/vnrt-psapi/: Cargo.toml
crates/vnrt-psapi/src/: lib.rs
crates/vnrt-runtime/: Cargo.toml
crates/vnrt-runtime/src/: allocation.rs  exceptions.rs  host_context.rs  lib.rs  loader.rs  objects.rs  process.rs  tests.rs  threads.rs
crates/vnrt-shell32/: Cargo.toml
crates/vnrt-shell32/src/: lib.rs
crates/vnrt-user32/: Cargo.toml
crates/vnrt-user32/src/: lib.rs
crates/vnrt-version/: Cargo.toml
crates/vnrt-version/src/: lib.rs
crates/vnrt-win32/: Cargo.toml
crates/vnrt-win32/src/: lib.rs
crates/vnrt-winmm/: Cargo.toml
crates/vnrt-winmm/src/: lib.rs
crates/vnrt-x86/: Cargo.toml
crates/vnrt-x86/src/: lib.rs
docs/: INTERPRETER_OPTIMIZATION.md  MEDIA.md  NEXT_STEPS.md  TARGET_CENSUS.md  TARGET_EUPHORIA.md  TARGET_EUPHORIA.zh-CN.md  TARGET_EUPHORIA_CN.md  TARGET_EUPHORIA_CN.zh-CN.md
tests/guest-programs/: README.md  build-exit42.sh  exit42.c  resource.txt
