[workspace]
resolver = "2"
members = [
    "crates/vnrt-pe",
    "crates/vnrt-memory",
    "crates/vnrt-ntdll",
    "crates/vnrt-x86",
    "crates/vnrt-win32",
    "crates/vnrt-kernel32",
    "crates/vnrt-logprint",
    "crates/vnrt-advapi32",
    "crates/vnrt-comctl32",
    "crates/vnrt-d3d9",
    "crates/vnrt-dsound",
    "crates/vnrt-psapi",
    "crates/vnrt-user32",
    "crates/vnrt-version",
    "crates/vnrt-shell32",
    "crates/vnrt-ole32",
    "crates/vnrt-gdi32",
    "crates/vnrt-gfx",
    "crates/vnrt-gfx-wgpu",
    "crates/vnrt-media",
    "crates/vnrt-imm32",
    "crates/vnrt-winmm",
    "crates/vnrt-runtime",
    "crates/vnrt-debugger",
    "apps/vnrt-inspect",
    "apps/vnrt-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
image = { version = "0.25.10", default-features = false, features = ["bmp", "dds", "gif", "ico", "jpeg", "png", "tga", "tiff", "webp"] }
iced-x86 = { version = "1.21", default-features = false, features = ["decoder", "std"] }
scroll = "0.13"
sdl3 = "0.18.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.6.0", default-features = false, features = ["aac", "adpcm", "aiff", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wgpu = { version = "30.0.0", default-features = false, features = ["std", "dx12", "gles", "metal", "vulkan", "wgsl"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"

# Fast relinking for target-frontier development. The final release profile
# keeps thin LTO; this profile favors iteration speed while retaining optimized
# interpreter code.
[profile.frontier]
inherits = "release"
codegen-units = 16
lto = false
