[package]
name = "vnrt-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
iced-x86.workspace = true
serde.workspace = true
serde_json.workspace = true
vnrt-pe = { path = "../../crates/vnrt-pe" }

[lints]
workspace = true
